fixing mis alignments

--- a/src/index.css
+++ b/src/index.css
@@ -178,19 +178,19 @@ p {
 
 @media screen and (max-width: 600px) {
   *, *::before, *::after {
-    box-sizing: border-box;
+    box-sizing: inherit;
   }
   html, body {
     /* margin: 0;
     padding: 0;
     height: 100vh;
     width: 100vw; */
-    overflow: hidden;
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    box-sizing: border-box;
 
     background-image: url('./assets/VERTICALBG.png');
     background-repeat: no-repeat;
@@ -212,20 +212,25 @@ p {
     padding: 12px 0;
     flex-shrink: 0;
     -webkit-flex-shrink: 0;
-    min-height: 2rem;
+    min-height: 1rem;
     min-width: 0;
   }
 
   .container {
     max-width: 400px;
-    width: 90%;
+    width: 90vw;
     text-align: center;
     margin: 0 auto;
     flex-shrink: 0;
     -webkit-flex-shrink: 0;
-    min-width: 0;
+    min-width: 320px;
+    display: block;
+    border: 2px dashed red;
+
   }
-  
+  .container > * {
+    min-width: 100%;
+  }
   .animate {
     width: 80%;
     display: flex;
